--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         node-version: ['16']
-    steps:
+    steps
     - uses: actions/checkout@v2
     - name: Setup Node.js
       uses: actions/setup-node@v2
